testall.log
/usr/local/opt/llvm/bin/lli

###### Testing test-add
dune exec toplevel tests/test-add.chomp > test-add.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-block
dune exec toplevel tests/test-block.chomp > test-block.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-builtins
dune exec toplevel tests/test-builtins.chomp > test-builtins.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-div
dune exec toplevel tests/test-div.chomp > test-div.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-for
dune exec toplevel tests/test-for.chomp > test-for.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-list-empty
dune exec toplevel tests/test-list-empty.chomp > test-list-empty.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-list-literals
dune exec toplevel tests/test-list-literals.chomp > test-list-literals.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-list-scope
dune exec toplevel tests/test-list-scope.chomp > test-list-scope.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-list
dune exec toplevel tests/test-list.chomp > test-list.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-mult
dune exec toplevel tests/test-mult.chomp > test-mult.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing test-sub
dune exec toplevel tests/test-sub.chomp > test-sub.ll
File "binb/codegen.ml", line 328, characters 46-67:
328 |           let _ = L.build_call printf_func [| divcar_err_format_str |] "printf" then_builder in
                                                    ^^^^^^^^^^^^^^^^^^^^^
Error: Unbound value divcar_err_format_str
Hint: Did you mean car_err_format_str?
###### FAILED

###### Testing fail-add
dune exec toplevel < tests/fail-add.chomp 2> fail-add.err >> testall.log
diff -b fail-add.err tests/fail-add.err > fail-add.diff
FAILED fail-add.err differs from tests/fail-add.err
###### FAILED

###### Testing fail-block
dune exec toplevel < tests/fail-block.chomp 2> fail-block.err >> testall.log
diff -b fail-block.err tests/fail-block.err > fail-block.diff
FAILED fail-block.err differs from tests/fail-block.err
###### FAILED

###### Testing fail-div
dune exec toplevel < tests/fail-div.chomp 2> fail-div.err >> testall.log
diff -b fail-div.err tests/fail-div.err > fail-div.diff
FAILED fail-div.err differs from tests/fail-div.err
###### FAILED

###### Testing fail-list-list
dune exec toplevel < tests/fail-list-list.chomp 2> fail-list-list.err >> testall.log
diff -b fail-list-list.err tests/fail-list-list.err > fail-list-list.diff
FAILED fail-list-list.err differs from tests/fail-list-list.err
###### FAILED

###### Testing fail-list-scope
dune exec toplevel < tests/fail-list-scope.chomp 2> fail-list-scope.err >> testall.log
diff -b fail-list-scope.err tests/fail-list-scope.err > fail-list-scope.diff
FAILED fail-list-scope.err differs from tests/fail-list-scope.err
###### FAILED

###### Testing fail-list
dune exec toplevel < tests/fail-list.chomp 2> fail-list.err >> testall.log
diff -b fail-list.err tests/fail-list.err > fail-list.diff
FAILED fail-list.err differs from tests/fail-list.err
###### FAILED

###### Testing fail-mult
dune exec toplevel < tests/fail-mult.chomp 2> fail-mult.err >> testall.log
diff -b fail-mult.err tests/fail-mult.err > fail-mult.diff
FAILED fail-mult.err differs from tests/fail-mult.err
###### FAILED

###### Testing fail-sub
dune exec toplevel < tests/fail-sub.chomp 2> fail-sub.err >> testall.log
diff -b fail-sub.err tests/fail-sub.err > fail-sub.diff
FAILED fail-sub.err differs from tests/fail-sub.err
###### FAILED
